--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ body {
     padding: 20px;
 }
 
-.ImageLogo {
+.game-logo {
     width: 85px;
     height: 85px;
     border-radius: 50%;
@@ -45,4 +45,8 @@ body {
 
 .store-item:hover {
     color: #ffd700;
+}
+
+.game-title:hover {
+    color: yellow;
 }
