--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-color: blueviolet;
+    background-color: rgb(107, 107, 107);
     font-family: "Lobster", cursive;
     color: white;
 }
